Fixing spotless for all files
Signed-off-by: Vacha Shah <vachshah@amazon.com>